--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -37,21 +37,22 @@
 	    	<div class="title_inside">SoHu Film Website</div>
 	    	<div class="title_line"></div>
 	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
-	        <div class="web_link"><a href="http://film.sohu.com">www.film.sohu.com</a></div>
+	        <div class="web_link"><a href="http://film.sohu.com">film.sohu.com</a></div>
 
 	        <div class="number_box">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Classic Elements
-for an Easy and Intuitive Navigation.</span></div>
+	        <div class="design_ui"><span>A Combination of Flat and Classic Elements<br>
+for an Easy and Intuitive.</span></div>
+            <div class="design_element"><img src="img/elements1.png"></div>
             <div class="design_img"><img src="img/film1.jpg"></div>
 
             <div class="number_box">3</div>
 	        <div class="title_inside"> UX DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Classic Elements
-for an Easy and Intuitive Navigation.</span></div>
-            <div class="design_img"><img src="img/film1.jpg"></div>
+	        <div class="design_ui"><span>We want give viewers a different use experience & visual experience. we take the branner cover the player, also made a turn off animation when user play the video</span></div>
+            <div class="design_img"><img src="img/film2.jpg"></div>
+            <div class="design_img"><img src="img/film3.jpg"></div>
 	      </div>  
 	    </div>
     
@@ -63,14 +64,20 @@ for an Easy and Intuitive Navigation.</span></div>
 <div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
-	        		<div class="lik-t"><p>477 Riddle Rd</p><p>Cincinnati, OH</p></div>
+	        		<div class="lik-t">
+	        			<ul class="linked">
+	        			<li class="lik"><span class="linkin">Linkin</span></li>
+	        			<li class="lik"><span class="facebook">facebook</span></li>
+	        		  </ul>
+	        		</div>
+
 	        		  <ul class="linked">
-	        			<li class="lik"><a href="">917-545-2916</a></li>
-	        			<li class="lik"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></li>
+	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
+	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
 	        		  </ul>
 	        	</div>
         	</div>	
-</div>
+    </div>
 
 </body>
 </html>
