--- a/portfolio.html
+++ b/portfolio.html
@@ -175,10 +175,16 @@
     <div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
-	        		<div class="lik-t"><p>477 Riddle Rd</p><p>Cincinnati, OH</p></div>
+	        		<div class="lik-t">
+	        			<ul class="linked">
+	        			<li class="lik"><span class="linkin">Linkin</span></li>
+	        			<li class="lik"><span class="facebook">facebook</span></li>
+	        		  </ul>
+	        		</div>
+
 	        		  <ul class="linked">
-	        			<li class="lik"><a href="">917-545-2916</a></li>
-	        			<li class="lik"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></li>
+	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
+	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
 	        		  </ul>
 	        	</div>
         	</div>	
