--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<div class="top-img">
 				<a href="index.html"><img src="img/logo.png"></a>
 			</div>
+			    <div class="mobile_nav"><span></span></div>
 				<ul class="menu">
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
 					<li><a href="cv.html">CV</a></li>
@@ -53,11 +54,11 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 				</li>
 
 				<li class="img-box" id="box_2">
-					<a href="../inset.html"><img id="m-img" src="img/2.png"></a>
+					<a href="portfolio-sce.html"><img id="m-img" src="img/2.png"></a>
 					<div class="box">
-				  		<a href="../inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
 			  			</div>
 				  	</div>
 				</li>
