--- a/portfolio.html
+++ b/portfolio.html
@@ -52,11 +52,11 @@
 				</li>
 
 				<li class="img-box" id="box_2">
-					<a href="../inset.html"><img id="m-img" src="img/2.png"></a>
+					<a href="portfolio-sce.html"><img id="m-img" src="img/2.png"></a>
 					<div class="box">
-				  		<a href="../inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
 			  			</div>
 				  	</div>
 				</li>
