--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
 
 		<div class="intro intro_portfolio">
 			<div class="intro_infor">
-				<div class="intro_infor_left"><a href=""><span id="red"> Download </span></a></div>
+				<div class="intro_infor_left"><a href="img/ShuaiZhou_resume.pdf" target="_self"><span id="red"> Download </span></a></div>
 				<div class="intro_infor_right"></div>
 			</div>
 		</div>
