--- a/portfolio-sce.html
+++ b/portfolio-sce.html
@@ -32,19 +32,19 @@
 		</div>
 
 	    <div class="main_design_container">
-	      <div class="container_box cb_sohufilm">
+	      <div class="container_box cb_sce">
 	    	<div class="number_box">1</div>
-	    	<div class="title_inside">SoHu Film Website</div>
+	    	<div class="title_inside">SCE Website</div>
 	    	<div class="title_line"></div>
 	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
-	        <div class="web_link"><a href="http://film.sohu.com" target="_Blank">film.sohu.com</a></div>
+	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">cloudscape.sohu.com</a></div>
 
 	        <div class="number_box nb">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
 	        <div class="design_ui"><span>A Combination of Flat and Classic Elements<br>
 for an Easy and Intuitive.</span></div>
-            <div class="design_img"><img src="img/film1.jpg"></div>
+            <div class="design_img"><img src="img/sce1.jpg"></div>
 
             <div class="number_box nb">3</div>
 	        <div class="title_inside"> UX DESIGN</div>
