--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
 
 		<div class="intro intro_portfolio">
 			<div class="intro_infor">
-				<div class="intro_infor_left"><span id="gre">- Portfolio</span></div>
+				<div class="intro_infor_left"><span id="gre">Portfolio</span></div>
 				<div class="intro_infor_right"><p>I have worked on some website & APP. Regardless of what kind of website we partner with, we pride ourselves on consistently delivering work of the highest quality. Here are a selection of the projects I've worked on recently.</p></div>
 			</div>
 		</div>
@@ -82,7 +82,7 @@
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="img/5.png"></a>
+					<a href="portfolio-sohufan.html"><img src="img/5.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
