--- a/portfolio-sohufan.html
+++ b/portfolio-sohufan.html
@@ -32,9 +32,9 @@
 		</div>
 
 	    <div class="main_design_container">
-	      <div class="container_box cb_fan">
+	      <div class="container_box cb_fans">
 	    	<div class="number_box">1</div>
-	    	<div class="title_inside">SCE Website</div>
+	    	<div class="title_inside">SoHu American Dramas Fans APP</div>
 	    	<div class="title_line"></div>
 	        <div class="respon_work"><span>UI design + framework</span></div>
 	        <div class="web_link">Online Soon</div>
@@ -42,16 +42,16 @@
 	        <div class="number_box nb">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Classic Elements<br>
-for an Easy and Intuitive.</span></div>
-            <div class="design_img"><img src="img/sce1.jpg"></div>
+	        <div class="design_ui"><span>A Combination of Flat and Blur<br>
+for an Simple and Clearly.</span></div>
+            <div class="design_img"><img src="img/fans1.jpg"></div>
 
             <div class="number_box nb">3</div>
 	        <div class="title_inside"> UX DESIGN</div>
 	        <div class="title_line"></div>
 	        <div class="design_ui"><span>Focus on Programmer, </span></div>
-            <div class="design_img"><img src="img/film2.jpg"></div>
-            <div class="design_img"><img src="img/film3.jpg"></div>
+            <div class="design_img"><img src="img/fans.jpg"></div>
+            <div class="design_img"><img src="img/fans2.jpg"></div>
 	      </div>  
 	    </div>
     
