--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="img/3.png"></a>
+					<a href="portfolio-mila.html"><img src="img/3.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
 			  			</div>
 				  	</div>
 				</li>
