--- a/portfolio-mila.html
+++ b/portfolio-mila.html
@@ -32,26 +32,19 @@
 		</div>
 
 	    <div class="main_design_container">
-	      <div class="container_box cb_sohufilm">
+	      <div class="container_box cb_mila">
 	    	<div class="number_box">1</div>
-	    	<div class="title_inside">SoHu Film Website</div>
+	    	<div class="title_inside">MILA Coffee Website</div>
 	    	<div class="title_line"></div>
-	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
-	        <div class="web_link"><a href="http://film.sohu.com" target="_Blank">www.film.sohu.com</a></div>
-
+	        <div class="respon_work"><span>UI design + Illustrator<br>HTML5 + CSS3 + JS</span></div>
+	        <div class="web_link">Online soon</div>
+	        <div class="design_img"><img src="img/mila1.png"></div>
 	        <div class="number_box nb">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Classic Elements<br>
+	        <div class="design_ui"><span>A Combination of Flat and Conciseness<br>
 for an Easy and Intuitive.</span></div>
-            <div class="design_img"><img src="img/film1.jpg"></div>
-
-            <div class="number_box nb">3</div>
-	        <div class="title_inside"> UX DESIGN</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A different use experience & visual experience.<br> we take the branner cover the player, <br>also made a turn off animation when user play the video</span></div>
-            <div class="design_img"><img src="img/film2.jpg"></div>
-            <div class="design_img"><img src="img/film3.jpg"></div>
+            <div class="design_img"><img src="img/mila2.png"></div>
 	      </div>  
 	    </div>
     
