--- a/portfolio-sce.html
+++ b/portfolio-sce.html
@@ -37,21 +37,21 @@
 	    	<div class="title_inside">SCE Website</div>
 	    	<div class="title_line"></div>
 	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
-	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">cloudscape.sohu.com</a></div>
+	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">www.cloudscape.sohu.com</a></div>
 
 	        <div class="number_box nb">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Classic Elements<br>
+	        <div class="design_ui"><span>A Combination of Flat and Conciseness<br>
 for an Easy and Intuitive.</span></div>
             <div class="design_img"><img src="img/sce1.jpg"></div>
 
             <div class="number_box nb">3</div>
 	        <div class="title_inside"> UX DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A different use experience & visual experience.<br> we take the branner cover the player, <br>also made a turn off animation when user play the video</span></div>
-            <div class="design_img"><img src="img/film2.jpg"></div>
-            <div class="design_img"><img src="img/film3.jpg"></div>
+	        <div class="design_ui"><span>The Website focus on programmer and developer, we communicated with them to find </span></div>
+            <div class="design_img" id="sceimg"><img src="img/sce2.jpg"></div>
+            <div class="design_img"><img src="img/sce3.jpg"></div>
 	      </div>  
 	    </div>
     
