--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -32,26 +32,31 @@
 		</div>
 
 	    <div class="main_design_container">
-	      <div class="container_box cb_sce">
-	    	<div class="number_box">1</div>
-	    	<div class="title_inside">SCE Website</div>
-	    	<div class="title_line"></div>
-	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
-	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">www.cloudscape.sohu.com</a></div>
-
-	        <div class="number_box nb">2</div>
-	        <div class="title_inside"> UI DESIGN</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Conciseness<br>
-for an Easy and Intuitive.</span></div>
-            <div class="design_img" id="sceimg"><img src="img/sce2.jpg"></div>
-            <div class="design_img"><img src="img/sce1.jpg"></div>
-            <div class="number_box nb">3</div>
-	        <div class="title_inside"> UX DESIGN</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span>The Website focus on programmer and developer, we communicated with them to find </span></div>
-	        <div class="design_img"><img src="img/sce4.jpg"></div>
-            <div class="design_img"><img src="img/sce3.jpg"></div>
+	      <div class="container_box cb_seeword">
+	    	<div class="part_1">
+	    		<div class="number_box">1</div>
+		    	<div class="title_inside">See Word Reading</div>
+		    	<div class="title_line"></div>
+		        <div class="respon_work"><span>UI Design + UX Design<br>APP + WEBSITE <br> HTML5 + CSS3 + JS</span></div>
+		        <div class="web_link">Online on this year</div>
+		        <div class="design_img"><img src="img/seeword.png"></div>
+	        </div>
+	        <div class="part_2">
+		        <div class="number_box nb">2</div>
+		        <div class="title_inside"> APP</div>
+		        <div class="title_line"></div>
+		        <div class="design_ui"><span>Conciseness and Clearly information<br>
+	for an Easy and Intuitive.</span></div>
+	            <div class="design_img"><img src="img/seeword2.jpg"></div>
+            </div>
+            <div class="part_3">
+	            <div class="number_box nb">3</div>
+		        <div class="title_inside"> WEBSITE </div>
+		        <div class="title_line"></div>
+		        <div class="design_ui"><span> Grouping the options, <br>help user to easy find the information what they want.</span></div>
+	            <div class="design_img"><img src="img/seeword1.jpg"></div>
+	            <div class="design_img"><img src="img/seeword2.jpg"></div>
+            </div>
 	      </div>  
 	    </div>
     
