--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			    <div class="mobile_nav"><span></span></div>
 				<ul class="menu">
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
-					<li><a href="cv.html">CV</a></li>
+					<li><a href="resume.html">RESUME</a></li>
 				</ul>
 		</div>
 		</div>
@@ -74,11 +74,11 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="img/4.png"></a>
+					<a href="portfolio-seeword.html"><img src="img/4.png"></a>
 					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
+				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../html/inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
+			  				<div class="head-img"><span class="head-img-name">那谁家小那谁</span></div>
 			  			</div>
 				  	</div>
 				</li>
