--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -22,7 +22,7 @@
 			</div>
 				<ul class="menu">
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
-					<li><a href="cv.html">CV</a></li>
+					<li><a href="resume.html">RESUME</a></li>
 				</ul>
 		</div>
 		</div>
@@ -54,6 +54,7 @@
 		        <div class="title_inside"> WEBSITE </div>
 		        <div class="title_line"></div>
 		        <div class="design_ui"><span> Grouping the options, <br>help user to easy find the information what they want.</span></div>
+		        <div class="design_img"><img src="img/seeword3.jpg"></div>
 	            <div class="design_img"><img src="img/seeword1.jpg"></div>
 	            <div class="design_img"><img src="img/seeword2.jpg"></div>
             </div>
