--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 			</div>
 				<ul class="menu">
 					<li><a href="portfolio.html">PORTFOLIO</a></li>
-					<li class="selected2"><a href="cv.html">CV</a></li>
+					<li class="selected2"><a href="resume.html">RESUME</a></li>
 				</ul>
 		</div>
 		</div>
