--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -22,7 +22,7 @@
 			</div>
 				<ul class="menu">
 					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
-					<li><a href="cv.html">CV</a></li>
+					<li><a href="resume.html">RESUME</a></li>
 				</ul>
 		</div>
 		</div>
