--- a/portfolio-sohublog.html
+++ b/portfolio-sohublog.html
@@ -35,31 +35,20 @@
 	      <div class="container_box cb_seeword">
 	    	<div class="part_1">
 	    		<div class="number_box">1</div>
-		    	<div class="title_inside">See Word Reading</div>
+		    	<div class="title_inside">UED Blog</div>
 		    	<div class="title_line"></div>
-		        <div class="respon_work"><span>UI Design + UX Design<br>APP + WEBSITE <br> HTML5 + CSS3 + JS</span></div>
-		        <div class="web_link"></div>
-		        <div class="design_img"><img src="img/seeword.png"></div>
-		        <div class="design_ui"><span>See word Reading is a App which can help children study the English words. <br>We also build a App for Teacher to observe the <br>student results data to help the teacher improve the study.</span></div>
+		        <div class="respon_work"><span>UI Design<br>HTML5 + CSS3</span></div>
+		        <div class="web_link">Online Soon</div>
+		        <div class="design_img"><img src="img/blog1.jpg"></div>
 	        </div>
 	        <div class="part_2">
 		        <div class="number_box nb">2</div>
-		        <div class="title_inside"> APP</div>
+		        <div class="title_inside"> UI Design</div>
 		        <div class="title_line"></div>
 		        <div class="design_ui"><span>Conciseness and Clearly information<br>
 	for an Easy and Intuitive.</span></div>
-	            <div class="design_img"><img src="img/seeword2.jpg"></div>
-            </div>
-            <div class="part_3">
-	            <div class="number_box nb">3</div>
-		        <div class="title_inside"> WEBSITE </div>
-		        <div class="title_line"></div>
-		        <div class="design_ui"><span> Grouping the options, <br>help user to easy find the information what they want.</span></div>
-		        <div class="design_img"><img src="img/seeword3.jpg"></div>
-		        <div class="design_img"><img src="img/seeword4.jpg"></div>
-		        <div class="design_ui"><span>Accroding to the demand, each level focus on different content.<br>We setting the fixed set of options on different level, it can help user save the time<br>Also we give options to teacher help them to find which part they need.<br></span></div>
-	            <div class="design_img"><img src="img/seeword1.jpg"></div>
-	            <div class="design_img"><img src="img/seeword2.jpg"></div>
+	            <div class="design_img"><img src="img/blog2.jpg"></div>
+	            <div class="design_img"><img src="img/blog3.jpg"></div>
             </div>
 	      </div>  
 	    </div>
