--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -36,7 +36,7 @@
 	    	<div class="number_box">1</div>
 	    	<div class="title_inside">SoHu Film Website</div>
 	    	<div class="title_line"></div>
-	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
+	        <div class="respon_work"><span>UI design + INTERACTION design<br>HTML5 + CSS3</span></div>
 	        <div class="web_link"><a href="http://film.sohu.com" target="_Blank">www.film.sohu.com</a></div>
 
 	        <div class="number_box nb">2</div>
@@ -47,9 +47,9 @@ for an Easy and Intuitive.</span></div>
             <div class="design_img"><img src="img/film1.jpg"></div>
 
             <div class="number_box nb">3</div>
-	        <div class="title_inside"> UX DESIGN</div>
+	        <div class="title_inside"> INTERACTION DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A different use experience & visual experience.<br> we take the branner cover the player, <br>also made a turn off animation when user play the video</span></div>
+	        <div class="design_ui"><span>A different <em>user experience & visual experience</em>.<br> we take the banner cover the player, <br>also made a turn off animation when user play the video</span></div>
             <div class="design_img"><img src="img/film2.jpg"></div>
             <div class="design_img"><img src="img/film3.jpg"></div>
 	      </div>  
