--- a/portfolio.html
+++ b/portfolio.html
@@ -92,11 +92,11 @@
 				</li>
 
 				<li class="img-box" id="img-box-b">
-					<a href="../html/inset.html"><img id="b-img" src="img/sohublog.png"></a>
+					<a href="portfolio-sohublog.html"><img id="b-img" src="img/sohublog.png"></a>
 					<div class="box" id="b_box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>See Word Reading Project</span></div></a>
+				  		<div class="img-title"><span>See Word Reading Project</span></div>
 			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">See Project</span></a></div>
+			  				<div class="head-img"><span class="head-img-name">See Project</span></div>
 			  			</div>
 				  	</div>
 				</li>
