--- a/portfolio-player.html
+++ b/portfolio-player.html
@@ -32,26 +32,22 @@
 		</div>
 
 	    <div class="main_design_container">
-	      <div class="container_box cb_fans">
-	    	<div class="number_box">1</div>
-	    	<div class="title_inside">SoHu American Dramas Fans APP</div>
-	    	<div class="title_line"></div>
-	        <div class="respon_work"><span>UI design + framework</span></div>
-	        <div class="web_link">Online Soon</div>
-
-	        <div class="number_box nb">2</div>
-	        <div class="title_inside"> UI DESIGN</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Blur<br>
-for an Simple and Clearly.</span></div>
-            <div class="design_img"><img src="img/fans1.jpg"></div>
-
-            <div class="number_box nb">3</div>
-	        <div class="title_inside"> Framework</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span></span></div>
-            <div class="design_img"><img src="img/fans.jpg"></div>
-            <div class="design_img"><img src="img/fans2.jpg"></div>
+	      <div class="container_box cb_player">
+	    	<div class="part_1">
+	    		<div class="number_box">1</div>
+		    	<div class="title_inside">Mobile Player</div>
+		    	<div class="title_line"></div>
+		        <div class="respon_work"><span>UI Design<br>ANIMATION</span></div>
+		        <div class="design_img"><img src="img/player5.png"></div>
+	        </div>
+	        <div class="part_2">
+		        <div class="number_box nb">2</div>
+		        <div class="title_inside"> INTERACTION DESIGN</div>
+		        <div class="title_line"></div>
+		        <div class="design_ui"><span>I want make a different way to operate</span></div>
+	            <div class="design_img"><img src="img/player.png"></div>
+	            <div class="design_img"><img src="img/player4.png"></div>
+            </div>
 	      </div>  
 	    </div>
     
