--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 		<div class="intro intro_portfolio">
 			<div class="intro_infor">
 				<div class="intro_infor_left"><span id="gre">Portfolio</span></div>
-				<div class="intro_infor_right"><p>I have worked on some website & APP. Regardless of what kind of website we partner with, we pride ourselves on consistently delivering work of the highest quality. Here are a selection of the projects I've worked on recently.</p></div>
+				<div class="intro_infor_right"><p>I have worked on some website & APP. Regardless of what kind of website or App I partner with, I pride myself on consistently delivering work of the highest quality. Here are a selection of the projects I've worked on recently.</p></div>
 			</div>
 		</div>
 
@@ -130,38 +130,6 @@
 			  			</div>
 				  	</div>
 				</li>
-
-				<li class="img-box">
-					<a href="../html/inset.html"><img src="img/5.png"></a>
-					<div class="box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box" id="img-box-b">
-					<a href="../html/inset.html"><img id="b-img" src="img/1.png"></a>
-					<div class="box" id="b_box">
-				  		<a href="../html/inset.html"><div class="img-title"><span>See Word Reading Project</span></div></a>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">See Project</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
-				<li class="img-box" id="box_2">
-					<a href="../inset.html"><img id="m-img" src="img/2.png"></a>
-					<div class="box">
-				  		<a href="../inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
-			  			<div class="sub-img-title">
-			  				<div class="head-img"><a href="../inset.html"><span class="head-img-name">那谁家小那谁</span></a></div>
-			  			</div>
-				  	</div>
-				</li>
-
-
 			</ul>
 		</div>
 	</div>
