--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 				</li>
 
 				<li class="img-box" id="box_2">
-					<a href="portfolio-sce.html"><img id="m-img" src="img/2.png"></a>
+					<a href="portfolio-seeword.html"><img id="m-img" src="img/2.png"></a>
 					<div class="box">
 				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
 			  			<div class="sub-img-title">
@@ -74,7 +74,7 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 				</li>
 
 				<li class="img-box">
-					<a href="portfolio-seeword.html"><img src="img/4.png"></a>
+					<a href="portfolio-sce.html"><img src="img/4.png"></a>
 					<div class="box">
 				  		<div class="img-title"><span>图标设计,应对APP臃肿化</span></div>
 			  			<div class="sub-img-title">
