--- a/portfolio.html
+++ b/portfolio.html
@@ -112,7 +112,7 @@
 				</li>
 
 				<li class="img-box">
-					<a href="../html/inset.html"><img src="img/3.png"></a>
+					<a href="../html/inset.html"><img src="img/xiaomi.png"></a>
 					<div class="box">
 				  		<a href="../html/inset.html"><div class="img-title"><span>图标设计,应对APP臃肿化</span></div></a>
 			  			<div class="sub-img-title">
