--- a/portfolio-xiaomi.html
+++ b/portfolio-xiaomi.html
@@ -32,23 +32,20 @@
 		</div>
 
 	    <div class="main_design_container">
-	      <div class="container_box cb_player">
+	      <div class="container_box cb_seeword">
 	    	<div class="part_1">
 	    		<div class="number_box">1</div>
-		    	<div class="title_inside">Mobile Player</div>
+		    	<div class="title_inside">MOBILE USER INTERFACE</div>
 		    	<div class="title_line"></div>
-		        <div class="respon_work"><span>UI Design<br>ANIMATION</span></div>
-		        <div class="design_img"><img src="img/player5.png"></div>
+		        <div class="design_img"><img src="img/xiaomi1.png"></div>
 	        </div>
 	        <div class="part_2">
 		        <div class="number_box nb">2</div>
-		        <div class="title_inside"> UI DESIGN</div>
+		        <div class="title_inside"> UI Design</div>
 		        <div class="title_line"></div>
-		        <div class="design_ui"><span>I want make a different way to operate</span></div>
-		        <div class="design_img"><img src="img/player.png"></div> 
-		        <div class="design_ui"><span>Detail interaction design</span></div>
-	            <div class="design_img"><img src="img/player1.png"></div>
-	            <div class="design_img"><img src="img/player6.png"></div>
+		        <div class="design_ui"><span>This UI elements based on tetris</span></div>
+	            <div class="design_img"><img src="img/xiaomi.png"></div>
+	            <div class="design_img"><img src="img/xiaomi1.png"></div>
             </div>
 	      </div>  
 	    </div>
