--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ I focus on UI & UX design. I was worked for Sohu.com, one of the most biggest In
 	        	<div class="link-list">
 	        		<div class="lik-t">
 	        			<ul class="linked">
-	        			<li class="lik"><span class="linkin">Linkin</span></li>
-	        			<li class="lik"><span class="facebook">facebook</span></li>
+	        			<li class="lik"><span class="linkin"></span></li>
+	        			<li class="lik"><span class="facebook"></span></li>
 	        		  </ul>
 	        		</div>
 
