--- a/portfolio-mila.html
+++ b/portfolio-mila.html
@@ -58,8 +58,8 @@ for an Easy and Intuitive.</span></div>
 	        	<div class="link-list">
 	        		<div class="lik-t">
 	        			<ul class="linked">
-	        			<li class="lik"><span class="linkin">Linkin</span></li>
-	        			<li class="lik"><span class="facebook">facebook</span></li>
+	        			<li class="lik"><span class="linkin"></span></li>
+	        			<li class="lik"><span class="facebook"></span></li>
 	        		  </ul>
 	        		</div>
 
