--- a/portfolio-sohublog.html
+++ b/portfolio-sohublog.html
@@ -45,8 +45,7 @@
 		        <div class="number_box nb">2</div>
 		        <div class="title_inside"> UI Design</div>
 		        <div class="title_line"></div>
-		        <div class="design_ui"><span>Conciseness and Clearly information<br>
-	for an Easy and Intuitive.</span></div>
+		        <div class="design_ui"><span>This blog to share the design article<br> and sold the stuff which design </span></div>
 	            <div class="design_img"><img src="img/blog2.jpg"></div>
 	            <div class="design_img"><img src="img/blog3.jpg"></div>
             </div>
@@ -63,8 +62,8 @@
 	        	<div class="link-list">
 	        		<div class="lik-t">
 	        			<ul class="linked">
-	        			<li class="lik"><span class="linkin">Linkin</span></li>
-	        			<li class="lik"><span class="facebook">facebook</span></li>
+	        			<li class="lik"><span class="linkin"></span></li>
+	        			<li class="lik"><span class="facebook"></span></li>
 	        		  </ul>
 	        		</div>
 
