--- a/portfolio-player.html
+++ b/portfolio-player.html
@@ -45,10 +45,11 @@
 		        <div class="title_inside"> UI DESIGN</div>
 		        <div class="title_line"></div>
 		        <div class="design_ui"><span>I want make a different way to operate</span></div>
-		        <div class="design_img"><img src="img/player.png"></div> 
+		        <div class="design_img cb_player_img"><img src="img/player.png"></div> 
+		        <div class="design_img cb_player_img"><img src="img/player4.png"></div>
 		        <div class="design_ui"><span>Detail interaction design</span></div>
-	            <div class="design_img"><img src="img/player1.png"></div>
-	            <div class="design_img"><img src="img/player6.png"></div>
+	            <div class="design_img cb_player_img"><img src="img/player1.png"></div>
+	            <div class="design_img cb_player_img"><img src="img/player6.png"></div>
             </div>
 	      </div>  
 	    </div>
@@ -63,8 +64,8 @@
 	        	<div class="link-list">
 	        		<div class="lik-t">
 	        			<ul class="linked">
-	        			<li class="lik"><span class="linkin">Linkin</span></li>
-	        			<li class="lik"><span class="facebook">facebook</span></li>
+	        			<li class="lik"><span class="linkin"></span></li>
+	        			<li class="lik"><span class="facebook"></span></li>
 	        		  </ul>
 	        		</div>
 
