--- a/portfolio-sohufan.html
+++ b/portfolio-sohufan.html
@@ -65,8 +65,8 @@ for an Simple and Clearly.</span></div>
 	        	<div class="link-list">
 	        		<div class="lik-t">
 	        			<ul class="linked">
-	        			<li class="lik"><span class="linkin">Linkin</span></li>
-	        			<li class="lik"><span class="facebook">facebook</span></li>
+	        			<li class="lik"><span class="linkin"></span></li>
+	        			<li class="lik"><span class="facebook"></span></li>
 	        		  </ul>
 	        		</div>
 
