--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -49,9 +49,10 @@ for an Easy and Intuitive.</span></div>
             <div class="number_box nb">3</div>
 	        <div class="title_inside"> INTERACTION DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A different <em>user experience & visual experience</em>.<br> we take the banner cover the player, <br>also made a turn off animation when user play the video</span></div>
+	        <div class="design_ui"><span>A different <em>user experience & visual experience</em>.</span></div>
             <div class="design_img"><img src="img/film2.jpg"></div>
             <div class="design_img"><img src="img/film3.jpg"></div>
+            <div class="design_ui"><span>we take the banner cover the player, <br>also made a turn off animation when user play the video</span></div>
 	      </div>  
 	    </div>
     
