--- a/portfolio-sce.html
+++ b/portfolio-sce.html
@@ -38,7 +38,7 @@
 	    	<div class="title_line"></div>
 	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
 	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">www.cloudscape.sohu.com</a></div>
-
+	        <div class="design_ui"><span></span></div>
 	        <div class="number_box nb">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
@@ -49,7 +49,7 @@ for an Easy and Intuitive.</span></div>
             <div class="number_box nb">3</div>
 	        <div class="title_inside"> UX DESIGN</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>The Website focus on programmer and developer, we communicated with them to find </span></div>
+	        <div class="design_ui"><span>The Website focus on programmer and developer, we communicated with them to find what kind of style they like.</span></div>
 	        <div class="design_img"><img src="img/sce4.jpg"></div>
             <div class="design_img"><img src="img/sce3.jpg"></div>
 	      </div>  
