--- a/portfolio-sce.html
+++ b/portfolio-sce.html
@@ -38,7 +38,7 @@
 	    	<div class="title_line"></div>
 	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
 	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">www.cloudscape.sohu.com</a></div>
-	        <div class="design_ui"><span></span></div>
+	        <div class="design_ui"><span>The website focus on cloud services. It has the target group.</span></div>
 	        <div class="number_box nb">2</div>
 	        <div class="title_inside"> UI DESIGN</div>
 	        <div class="title_line"></div>
@@ -63,13 +63,6 @@ for an Easy and Intuitive.</span></div>
 <div class="footer">
 	    	<div class="bot-link">
 	        	<div class="link-list">
-	        		<div class="lik-t">
-	        			<ul class="linked">
-	        			<li class="lik"><span class="linkin">Linkin</span></li>
-	        			<li class="lik"><span class="facebook">facebook</span></li>
-	        		  </ul>
-	        		</div>
-
 	        		  <ul class="linked">
 	        			<li class="lik"><span class="phone"><a href="">917-545-2916</a></span></li>
 	        			<li class="lik"><span class="email"><a href="mailto:shuaizhou487@gmail.com">shuaizhou487@gmail.com</a></span></li>
