--- a/portfolio-xiaomi.html
+++ b/portfolio-xiaomi.html
@@ -32,7 +32,7 @@
 		</div>
 
 	    <div class="main_design_container">
-	      <div class="container_box cb_seeword">
+	      <div class="container_box cb_xiaomi">
 	    	<div class="part_1">
 	    		<div class="number_box">1</div>
 		    	<div class="title_inside">MOBILE USER INTERFACE</div>
@@ -44,8 +44,8 @@
 		        <div class="title_inside"> UI Design</div>
 		        <div class="title_line"></div>
 		        <div class="design_ui"><span>This UI elements based on tetris</span></div>
+	            <div class="design_img"><img src="img/xiaomi2.png"></div>
 	            <div class="design_img"><img src="img/xiaomi.png"></div>
-	            <div class="design_img"><img src="img/xiaomi1.png"></div>
             </div>
 	      </div>  
 	    </div>
