--- a/portfolio-player.html
+++ b/portfolio-player.html
@@ -33,14 +33,14 @@
 
 	    <div class="main_design_container">
 	      <div class="container_box cb_player">
-	    	<div class="part_1">
+	    	<div class="part part_1">
 	    		<div class="number_box">1</div>
 		    	<div class="title_inside">Mobile Player</div>
 		    	<div class="title_line"></div>
 		        <div class="respon_work"><span>UI Design<br>ANIMATION</span></div>
 		        <div class="design_img"><img src="img/player5.png"></div>
 	        </div>
-	        <div class="part_2">
+	        <div class="part part_2">
 		        <div class="number_box nb">2</div>
 		        <div class="title_inside"> UI DESIGN</div>
 		        <div class="title_line"></div>
