--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -33,26 +33,29 @@
 
 	    <div class="main_design_container">
 	      <div class="container_box cb_sohufilm">
-	    	<div class="number_box">1</div>
+	       <div class="part part_1">
 	    	<div class="title_inside">SoHu Film Website</div>
 	    	<div class="title_line"></div>
 	        <div class="respon_work"><span>UI design + INTERACTION design<br>HTML5 + CSS3</span></div>
 	        <div class="web_link"><a href="http://film.sohu.com" target="_Blank">www.film.sohu.com</a></div>
-
+	       </div>
+	       <div class="part part_2">
+	        <div class="title_inside">DESIGN IDEATION</div>
+	        <div class="title_line"></div>
+	        <div class="number_box nb">1</div>
+	        <div class="design_ui"><span>Interview the target users,<br>Find out required and get the suggest from them</span></div>
+	        <div class="design_img"><img src="img/filmin.jpg"></div>
 	        <div class="number_box nb">2</div>
-	        <div class="title_inside"> UI DESIGN</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Classic Elements<br>
-for an Easy and Intuitive.</span></div>
+	        <div class="design_ui"><span>Figure out how to solve the problems</span></div>
+	        <div class="design_img"><img src="img/filmin2.jpg"></div>
+	        <div class="number_box nb">3</div>
+	        <div class="design_ui"><span>Visual Phototype</span></div>
             <div class="design_img"><img src="img/film1.jpg"></div>
-
-            <div class="number_box nb">3</div>
-	        <div class="title_inside"> INTERACTION DESIGN</div>
-	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A different <em>user experience & visual experience</em>.</span></div>
+            <div class="design_ui"><span>we take the banner cover the player, <br>also made a turn off animation when user play the video</span></div>
             <div class="design_img"><img src="img/film2.jpg"></div>
             <div class="design_img"><img src="img/film3.jpg"></div>
-            <div class="design_ui"><span>we take the banner cover the player, <br>also made a turn off animation when user play the video</span></div>
+            
+           </div>
 	      </div>  
 	    </div>
     
