--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -33,8 +33,7 @@
 
 	    <div class="main_design_container">
 	      <div class="container_box cb_seeword">
-	    	<div class="part_1">
-	    		<div class="number_box nb">1</div>
+	    	<div class="part part_1">
 		    	<div class="title_inside">See Word Reading</div>
 		    	<div class="title_line"></div>
 		        <div class="respon_work"><span>UI Design + UX Design<br>APP + WEBSITE <br> HTML5 + CSS3 + JS</span></div>
@@ -42,17 +41,19 @@
 		        <div class="design_img"><img src="img/seeword.png"></div>
 		        <div class="design_ui"><span>See word Reading is a App which can help children study the English words. <br>We also build a App for Teacher to observe the <br>student results data to help the teacher improve the study.</span></div>
 	        </div>
-            <div class="part part_3">
-	            <div class="number_box nb">2</div>
-		        <div class="title_inside"> WEBSITE </div>
+            <div class="part part_2">
+	            <div class="title_inside"> WEBSITE DESIGN IDEATION</div>
 		        <div class="title_line"></div>
-		        <div class="design_ui"><span>The website is a database website. <br>Teacher use this website to check or download the data  to help teacher find the problem.</span></div>
+		        <div class="number_box nb">1</div>
+		        <div class="design_ui"><span>What problems we have?</span></div>
+		        <div class="design_img"><img src="img/seewordin.png"></div>
+		        <div class="design_ui"><span>All the information shows on one page, unaccessible to find the information</span></div>
 		        <div class="design_img"><img src="img/seeword3.jpg"></div>
 		        <div class="design_ui"><span>Grouping the options, <br>help user to easy find the information what they want.</span></div>
 		        <div class="design_img"><img src="img/seeword4.jpg"></div>
 		        <div class="design_ui"><span>Accroding to the demand, each level focus on different content.<br>We setting the fixed set of options on different level, it can help user save the time<br>Also we give options to teacher help them to find which part they need.<br></span></div>
 		    </div>    
-		    <div class="part part_4">
+		    <div class="part part_3">
 	            <div class="design_img"><img src="img/seeword1.jpg"></div>
 	            <div class="design_ui"><span>I made a interesting interaction animation<br>When you type the word on inputbox, the text will move to top</span></div>
 	        </div>
