--- a/portfolio-sce.html
+++ b/portfolio-sce.html
@@ -33,17 +33,18 @@
 
 	    <div class="main_design_container">
 	      <div class="container_box cb_sce">
-	    	<div class="number_box">1</div>
+	       <div class="part part_1"> 	
 	    	<div class="title_inside">SCE Website</div>
 	    	<div class="title_line"></div>
+	    	<div class="design_ui"><span>SCE Website focus on cloud services.<br>The target user be composed of developer and programmer</span></div>
 	        <div class="respon_work"><span>UI design + UX design<br>HTML5 + CSS3</span></div>
 	        <div class="web_link"><a href="http://cloudscape.sohu.com" target="_Blank">www.cloudscape.sohu.com</a></div>
-	        <div class="design_ui"><span>The website focus on cloud services. It has the target group.</span></div>
-	        <div class="number_box nb">2</div>
-	        <div class="title_inside"> UI DESIGN</div>
+	       </div>
+	       <div class="part part_2">
+	        <div class="title_inside">DESIGN IDEATION</div>
 	        <div class="title_line"></div>
-	        <div class="design_ui"><span>A Combination of Flat and Conciseness<br>
-for an Easy and Intuitive.</span></div>
+	        <div class="number_box nb">1</div>
+	        <div class="design_ui"><span>Our Target</span></div>
             <div class="design_img" id="sceimg"><img src="img/sce2.jpg"></div>
             <div class="design_img"><img src="img/sce1.jpg"></div>
             <div class="number_box nb">3</div>
@@ -52,6 +53,7 @@ for an Easy and Intuitive.</span></div>
 	        <div class="design_ui"><span>The Website focus on programmer and developer, we communicated with them to find what kind of style they like.</span></div>
 	        <div class="design_img"><img src="img/sce4.jpg"></div>
             <div class="design_img"><img src="img/sce3.jpg"></div>
+           </div> 
 	      </div>  
 	    </div>
     
