--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -46,14 +46,20 @@
 		        <div class="title_line"></div>
 		        <div class="number_box nb">1</div>
 		        <div class="design_ui"><span>What problems we have?</span></div>
+		        <div class="design_ui"><span>All the information shows on one page, <em>unaccessible</em> to find the information</span></div>
 		        <div class="design_img"><img src="img/seewordin.png"></div>
-		        <div class="design_ui"><span>All the information shows on one page, unaccessible to find the information</span></div>
+		        <div class="number_box nb">2</div>
+		        <div class="design_ui"><span>Getting the required from teachers</span></div>
+		        <div class="design_img"><img src="img/seewordin2.jpg"></div>
+		        <div class="number_box nb">3</div>
+		        <div class="design_ui"><span>Each Level has different emphasis. </span></div>
+		        <div class="design_ui"><span>Show the information clear and help teacher<br>easy to find out the information they need is our goal.</span></div>
 		        <div class="design_img"><img src="img/seeword3.jpg"></div>
-		        <div class="design_ui"><span>Grouping the options, <br>help user to easy find the information what they want.</span></div>
-		        <div class="design_img"><img src="img/seeword4.jpg"></div>
 		        <div class="design_ui"><span>Accroding to the demand, each level focus on different content.<br>We setting the fixed set of options on different level, it can help user save the time<br>Also we give options to teacher help them to find which part they need.<br></span></div>
-		    </div>    
-		    <div class="part part_3">
+		        <div class="design_img"><img src="img/seeword4.jpg"></div>
+		        <div class="design_img"><img src="img/seeword.jpg"></div>
+		        <div class="number_box nb">4</div>
+		        <div class="design_ui"><span>Final Phototype</span></div>
 	            <div class="design_img"><img src="img/seeword1.jpg"></div>
 	            <div class="design_ui"><span>I made a interesting interaction animation<br>When you type the word on inputbox, the text will move to top</span></div>
 	        </div>
