--- a/portfolio-seeword.html
+++ b/portfolio-seeword.html
@@ -7,7 +7,8 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>Shuai Webdesign</title>
+    <title>Shuai | See Word Reading</title>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -34,32 +35,37 @@
 	    <div class="main_design_container">
 	      <div class="container_box cb_seeword">
 	    	<div class="part part_1">
-		    	<div class="title_inside">See Word Reading</div>
+		    	<div class="title_inside">SEE WORD READING</div>
 		    	<div class="title_line"></div>
-		        <div class="respon_work"><span>UI Design + UX Design<br>APP + WEBSITE <br> HTML5 + CSS3 + JS</span></div>
-		        <div class="web_link"></div>
-		        <div class="design_img"><img src="img/seeword.png"></div>
-		        <div class="design_ui"><span>See word Reading is a App which can help children study the English words. <br>We also build a App for Teacher to observe the <br>student results data to help the teacher improve the study.</span></div>
+		        <div id="ti_img" class="design_img"><img src="img/seeword.png"></div>
+		        <div class="design_ui"><span>Help Teacher to find the data information <em>EASILY</em> and <em>QUICKLY</em></span></div>
+		        <div class="design_p"><span>See word reading Website is a student data information website. Teacher through analysis the data which recorded by see word reading App to help student improve the study.</span></div>
 	        </div>
             <div class="part part_2">
-	            <div class="title_inside"> WEBSITE DESIGN IDEATION</div>
-		        <div class="title_line"></div>
+	            <div class="title_inside"> DESIGN PROCESS</div>
+	            <div class="title_line"></div>
+	            <div class="design_img"><img src="img/seeword1.png"></div>
 		        <div class="number_box nb">1</div>
+		        <div class="design_title">Research</div>
 		        <div class="design_ui"><span>What problems we have?</span></div>
-		        <div class="design_ui"><span>All the information shows on one page, <em>unaccessible</em> to find the information</span></div>
-		        <div class="design_img"><img src="img/seewordin.png"></div>
+		        <div class="design_img"><img src="img/seeword2.png"></div>
 		        <div class="number_box nb">2</div>
-		        <div class="design_ui"><span>Getting the required from teachers</span></div>
-		        <div class="design_img"><img src="img/seewordin2.jpg"></div>
+		        <div class="design_title">Ideation</div>
+		        <div class="design_ui"><span>Solution</span></div>
+		        <div class="design_img"><img src="img/seeword3.png"></div>
+		        <div class="design_ui"><span>Information structure</span></div>
+		        <div class="design_img"><img src="img/seeword3.png"></div>
+		        <div class="design_ui"><span>Wireframe</span></div>
+		        <div class="design_img"><img src="img/seeword4.png"></div>
 		        <div class="number_box nb">3</div>
-		        <div class="design_ui"><span>Each Level has different emphasis. </span></div>
+		        <div class="design_title">Refine</div>
 		        <div class="design_ui"><span>Show the information clear and help teacher<br>easy to find out the information they need is our goal.</span></div>
 		        <div class="design_img"><img src="img/seeword3.jpg"></div>
 		        <div class="design_ui"><span>Accroding to the demand, each level focus on different content.<br>We setting the fixed set of options on different level, it can help user save the time<br>Also we give options to teacher help them to find which part they need.<br></span></div>
 		        <div class="design_img"><img src="img/seeword4.jpg"></div>
 		        <div class="design_img"><img src="img/seeword.jpg"></div>
 		        <div class="number_box nb">4</div>
-		        <div class="design_ui"><span>Final Phototype</span></div>
+		        <div class="design_title">Final Phototype</div>
 	            <div class="design_img"><img src="img/seeword1.jpg"></div>
 	            <div class="design_ui"><span>I made a interesting interaction animation<br>When you type the word on inputbox, the text will move to top</span></div>
 	        </div>
