--- a/portfolio-sohufan.html
+++ b/portfolio-sohufan.html
@@ -7,7 +7,7 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>Shuai Webdesign</title>
+    <title>Shuai | SoHu Dramas Fans APP</title>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
